Move feature() into AnnotationController
Move scope.feature() from the annotation directive to vm.feature() in
the AnnotationController. Just trying to move as much as possible out of
the directive's scope and link function into the controller, if we're
gonna use a directive controller here try to just use it instead of
randomly using the link function and scope for some things and the
controller for others.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -57,7 +57,7 @@
   <section class="annotation-quote-list"
            ng-repeat="target in vm.annotation.target track by $index"
            ng-if="vm.hasQuotes()">
-    <excerpt enabled="feature('truncate_annotations')">
+    <excerpt enabled="vm.feature('truncate_annotations')">
       <blockquote class="annotation-quote"
                   ng-bind-html="selector.exact"
                   ng-repeat="selector in target.selector
@@ -70,7 +70,7 @@
 
   <!-- Body -->
   <section name="text" class="annotation-body">
-    <excerpt enabled="feature('truncate_annotations') && !vm.editing()">
+    <excerpt enabled="vm.feature('truncate_annotations') && !vm.editing()">
       <markdown ng-model="vm.annotation.text"
            read-only="!vm.editing()"
            ></markdown>
