Move share() into AnnotationController
Move scope.share() from the annotation directive to vm.share() in
the AnnotationController. Just trying to move as much as possible out of
the directive's scope and link function into the controller, if we're
gonna use a directive controller here try to just use it instead of
randomly using the link function and scope for some things and the
controller for others.

--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -141,7 +141,7 @@
               ><i class="h-icon-reply btn-icon"></i> Reply</button>
       <span class="share-dialog-wrapper">
         <button class="small btn btn-clean"
-                ng-click="share($event)"
+                ng-click="vm.share($event)"
                 ><i class="h-icon-link btn-icon"></i> Link</button>
         <span class="share-dialog" ng-click="$event.stopPropagation()">
           <a target="_blank"
