Add groups list to admin dashboard

--- a/h/templates/layouts/admin.html.jinja2
+++ b/h/templates/layouts/admin.html.jinja2
@@ -5,6 +5,7 @@
     ('admins', 'admin_admins', 'Administrators'),
     ('staff', 'admin_staff', 'Staff'),
     ('users', 'admin_users', 'Users'),
+    ('groups', 'admin_groups', 'Groups'),
     ('badge', 'admin_badge', 'Badge'),
 ] -%}
 
