Add description to Groups admin dashboard

--- a/h/templates/admin/groups.html.jinja2
+++ b/h/templates/admin/groups.html.jinja2
@@ -4,6 +4,9 @@
 {% set page_title = 'Groups' %}
 
 {% block content %}
+  <p>
+    On this page you can see a list of all the groups and their details.
+  </p>
 
   <div class="table-responsive">
     <table class="table table-striped">
