Generate groups report in downloadable CSV format

--- a/h/templates/admin/groups.html.jinja2
+++ b/h/templates/admin/groups.html.jinja2
@@ -8,6 +8,12 @@
     On this page you can see a list of all the groups and their details.
   </p>
 
+  <p>
+    <a href="{{ request.route_url('admin_groups_csv') }}">
+      Download report as CSV
+    </a>
+  </p>
+
   <div class="table-responsive">
     <table class="table table-striped">
       <thead>
