--- a/h/static/styles/header.scss
+++ b/h/static/styles/header.scss
@@ -174,6 +174,11 @@
       margin-top: 10px;
       max-height: 0px;
       transition: max-height $anim-duration-normal ease-in;
+
+      // make the nav bar occupy the full width of the page when
+      // opened
+      margin-left: - $layout-h-margin;
+      margin-right: - $layout-h-margin;
     }
 
     .nav-bar-container.is-open {
@@ -182,6 +187,8 @@
       // the container grows in height at roughly the same speed as the
       // menu content slides down
       max-height: 400px;
+      border-top: 1px solid $color-alto;
+      border-bottom: 1px solid $color-alto;
     }
 
     .nav-bar {
@@ -220,7 +227,7 @@
       position: relative;
 
       border: none;
-      padding-left: 0px;
+      padding-left: 40px;
       padding-bottom: 10px;
     }
 
