Replace 'Code of conduct' link with 'Community Guidelines'
Update the link as noted to the newly published
Community Guidelines as noted at https://github.com/hypothesis/h/pull/2770#issuecomment-162724789

--- a/h/templates/includes/header.html.jinja2
+++ b/h/templates/includes/header.html.jinja2
@@ -51,7 +51,7 @@
                   <li class="nav-bar-menu__item"><a href="/fund">Grant opportunities</a></li>
                   <li class="nav-bar-menu__item"><a href="/for-publishers">For Publishers</a></li>
                   <li class="nav-bar-menu__separator"></li>
-                  <li class="nav-bar-menu__item"><a href="/code-of-conduct">Code of conduct</a></li>
+                  <li class="nav-bar-menu__item"><a href="/community-guidelines">Community Guidelines</a></li>
                   <li class="nav-bar-menu__item"><a href="/terms-of-service">Terms of Service</a></li>
               </ul>
           </li>
