--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -71,7 +71,7 @@
   <!-- Body -->
   <section name="text" class="annotation-body">
     <excerpt enabled="vm.feature('truncate_annotations') && !vm.editing()">
-      <markdown ng-model="vm.annotation.text"
+      <markdown ng-model="vm.form.text"
            read-only="!vm.editing()"
            ></markdown>
     </excerpt>
@@ -80,7 +80,7 @@
 
   <!-- Tags -->
   <div class="annotation-body form-field" ng-if="vm.editing()">
-    <tags-input ng-model="vm.annotation.tags"
+    <tags-input ng-model="vm.form.tags"
                 name="tags"
                 class="tags"
                 placeholder="Add tags…"
@@ -94,9 +94,9 @@
   </div>
 
   <div class="annotation-body tags tags-read-only"
-       ng-if="vm.annotation.tags.length && !vm.editing()">
+       ng-if="vm.form.tags.length && !vm.editing()">
     <ul class="tag-list">
-      <li class="tag-item" ng-repeat="tag in vm.annotation.tags">
+      <li class="tag-item" ng-repeat="tag in vm.form.tags">
         <a href="/stream?q=tag:'{{tag.text|urlencode}}'" target="_blank">{{tag.text}}</a>
       </li>
     </ul>
