--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -29,7 +29,7 @@
     </p>
 
     <div class="home__section installer">
-      <a class="install-btn is-hidden js-env-browser-is-chrome"
+      <a class="install-btn is-hidden js-install-chrome"
           href="{{chrome_ext_link}}"
           onclick="chrome.webstore.install();return false;"
           data-chromeext-button="">
@@ -37,14 +37,14 @@
               src="{{ base_url }}assets/images/browser-chrome-64x64.png">
         Install Chrome extension
       </a>
-      <a class="install-btn is-hidden js-env-browser-is-other js-env-installer-available"
+      <a class="install-btn is-hidden js-install-bookmarklet"
           href="#"
           data-toggle="modal" data-target="#bookmarklet">
         Get Bookmarklet
       </a>
 
-      <em class="installer__alt is-hidden js-env-installer-available">or</em>
-      
+      <em class="installer__alt is-hidden js-install-any">or</em>
+
       <form
         class="proxy-link-form"
         onsubmit="url = document.getElementById('search').value; if (url != '') { window.location.href = 'https://via.hypothes.is/h/' + url; } return false;">
