--- a/h/templates/layouts/base.html.jinja2
+++ b/h/templates/layouts/base.html.jinja2
@@ -57,7 +57,7 @@
 
     {% block base_tag %}{% endblock %}
   </head>
-  {% block body_tag %}<body>{% endblock %}
+  {% block body_tag %}<body class="body--default">{% endblock %}
     {% block content %}{% endblock %}
     {% block templates %}{% endblock %}
     {% block scripts %}{% endblock %}
