Small tweaks to the header for re-use in the blog
 * Add notes in the header and footer about updating the blog's
   navigation when updating the navigation on the main site.

 * Increase the Z-index for dropdown menus in the header
   to avoid a problem where the search box on the blog
   appeared over the top of the dropdown.

   Add a central place for a Z-Index scale in variables.scss
   to avoid such problems in future.

 * Set the horizontal padding explicitly for the nav dropdown
   menus. Previously the site relied on padding set by
   a compass reset which was not present on the blog which
   uses a much more minimal reset.

--- a/h/static/styles/variables.scss
+++ b/h/static/styles/variables.scss
@@ -135,6 +135,11 @@ $layout-h-margin: 15px;
 $anim-duration-normal: .3s; // a good default choice for transition lengths
 
 
+// Z-Index Scale
+// -------------------------
+$zindex-dropdown-menu: 10;
+
+
 // Other Variables
 // -------------------------
 $bucket-bar-width: 22px;
