--- a/h/templates/includes/footer.html.jinja2
+++ b/h/templates/includes/footer.html.jinja2
@@ -1,3 +1,12 @@
+{#
+
+  Site and blog navigation footer.
+
+  This is shared between the site and blog.
+  See comments in header.html.jinja2 about updating
+  the blog theme when changing this.
+
+#}
 <footer class="footer">
   <div class="u-align-right social-media">
     <a class="social-media-link" href="https://github.com/hypothesis">
