--- a/h/templates/includes/header.html.jinja2
+++ b/h/templates/includes/header.html.jinja2
@@ -1,3 +1,13 @@
+{#
+
+  Site and blog navigation header.
+
+  Note that this component is used by both the website and the blog.
+  When updating the navigation here, the WordPress Theme will also need
+  to be updated using the 'update-hypothesis-shared.py' script in
+  the wordpress-theme-hypothesis repository.
+
+#}
 <svg style="display:none">
     <symbol class="border-with-left-arrow" id="border-with-left-arrow">
         <rect class="background-rect" stroke="none" x="0" y="0" width="10" height="20"/>
