--- a/h/static/styles/header.scss
+++ b/h/static/styles/header.scss
@@ -107,8 +107,10 @@
 
     padding-top: 2px;
     padding-bottom: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
 
-    z-index: 1;
+    z-index: $zindex-dropdown-menu;
   }
 
   .nav-bar-menu.is-open {
