--- a/h/static/styles/util.scss
+++ b/h/static/styles/util.scss
@@ -3,6 +3,11 @@
   flex-grow: 1;
 }
 
+.u-layout-row {
+  display: flex;
+  flex-direction: row;
+}
+
 .u-center {
   margin-left: auto;
   margin-right: auto;
@@ -12,4 +17,8 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+}
+
+.u-strong {
+  font-weight: bold;
 }
