--- a/h/templates/client/excerpt.html
+++ b/h/templates/client/excerpt.html
@@ -1,18 +1,22 @@
 <div ng-transclude ng-if="!vm.enabled()"></div>
-<div class="excerpt" ng-if="vm.enabled()">
-  <div ng-transclude></div>
-  <div class="excerpt__inline-controls"
-       ng-show="vm.showInlineControls()">
-    <span class="excerpt__toggle-link" ng-show="vm.isExpandable()">
-      … <a ng-click="vm.toggle()"
-          title="Show the full excerpt">More</a>
-    </span>
-    <span class="excerpt__toggle-link" ng-show="vm.isCollapsible()">
-      <a ng-click="vm.toggle()"
-          title="Show the first few lines only">Less</a>
-    </span>
+<div class="excerpt__container" ng-if="vm.enabled()">
+  <div class="excerpt">
+    <div ng-transclude></div>
+    <div class="excerpt__inline-controls"
+         ng-show="vm.showInlineControls()">
+      <span class="excerpt__toggle-link" ng-show="vm.isExpandable()">
+        … <a ng-click="vm.toggle()"
+            title="Show the full excerpt">More</a>
+      </span>
+      <span class="excerpt__toggle-link" ng-show="vm.isCollapsible()">
+        <a ng-click="vm.toggle()"
+            title="Show the first few lines only">Less</a>
+      </span>
+    </div>
   </div>
   <div class="excerpt__shadow"
+       ng-click="vm.toggle()"
        ng-class="{'is-hidden' : !vm.isExpandable()}"
-       ng-if="!vm.inlineControls"></div>
+       ng-if="!vm.inlineControls"
+       title="Show the full excerpt"></div>
 </div>
