Use one-time bindings in annotation templates for immutable expressions
Use one-time bindings in the annotation component's template
for expressions whose values cannot change during the lifetime
of an annotation card.

Testing using the default /stream view, without scrolling:

Initial status as of 1ceb5fcefd7fa057bdbcf1f73df57d007289531f averaged
over 30+ digest cycles:

 Digest cycle: ~30ms
 Watchers: 1686

With this commit:

 Digest cycle: ~26ms
 Watchers: 1649

--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -25,7 +25,7 @@
     on-logout="logout()"
     account-dialog="accountDialog"
     share-dialog="shareDialog"
-    is-sidebar="isSidebar"
+    is-sidebar="::isSidebar"
     search-controller="search"
     sort-by="sort.name"
     sort-options="sort.options"
