--- a/h/templates/client/thread.html
+++ b/h/templates/client/thread.html
@@ -15,7 +15,7 @@
          name="annotation"
          annotation="vm.container.message"
          is-last-reply="$last"
-         is-sidebar="isSidebar"
+         is-sidebar="::isSidebar"
          annotation-show-reply-count="{{vm.shouldShowNumReplies()}}"
          annotation-reply-count="{{vm.numReplies()}}"
          annotation-reply-count-click="vm.toggleCollapsed()"
