Re-enable client-side handling of the Via link
This avoids a redirect in the common case that JS is
available and has loaded.

 * Refactor the controller setup for the home route
   to be consistent with how it is handled for other pages.

--- a/h/templates/home.html.jinja2
+++ b/h/templates/home.html.jinja2
@@ -49,7 +49,7 @@
       <em class="installer__alt is-hidden js-install-any">or</em>
 
       <form
-        class="proxy-link-form"
+        class="proxy-link-form js-proxy-form"
         action="/via">
         <input id="search" class="proxy-link-form__field" type="text"
                 name="url" placeholder="Paste a link to annotate…">
