Fix excerpt content height when switching from edit back to view mode
The 'max-height' style property was not updated when the <excerpt>'s
enabled state changed from false to true which happened when switching
from annotation edit mode back to view mode.

Use ngStyle to ensure the inline styles applied to the <excerpt>'s
content element are updated as necessary in this case.

--- a/h/templates/client/excerpt.html
+++ b/h/templates/client/excerpt.html
@@ -1,6 +1,6 @@
 <div ng-transclude ng-if="!vm.enabled()"></div>
 <div class="excerpt__container" ng-if="vm.enabled()">
-  <div class="excerpt">
+  <div class="excerpt" ng-style="vm.contentStyle()">
     <div ng-transclude></div>
     <div class="excerpt__inline-controls"
          ng-show="vm.showInlineControls()">
