Make the full width of an annotation quote clickable to expand it
For consistency with annotation bodies and to provide an easier hit
target on mobile, make the full width of annotation quotes clickable
to expand them.

--- a/h/static/styles/excerpt.scss
+++ b/h/static/styles/excerpt.scss
@@ -57,6 +57,10 @@
     transition: opacity $expand-duration linear;
   }
 
+  .excerpt__shadow--transparent {
+    background-image: none;
+  }
+
   .excerpt__shadow.is-hidden {
     opacity: 0;
     pointer-events: none;
