--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -20,22 +20,16 @@ $annotation-card-left-padding: 10px;
   font-family: $sans-font-family;
   font-weight: 300;
   position: relative;
-
-  .reply-count {
-    color: $gray-light;
-    &:focus { outline: 0; }
-  }
-
-  &:hover .annotation-timestamp, &:hover .reply-count  {
-    color: $link-color;
-  }
 }
 
-.annotation-timestamp {
+.annotation-link {
   font-size: $body1-font-size;
   color: $color-gray;
-  &:hover { color: $link-color-hover; }
   &:focus { outline: 0; }
+
+  .annotation:hover & {
+    color: $link-color;
+  }
 }
 
 .annotation-quote-list,
