--- a/h/templates/client/annotation.html
+++ b/h/templates/client/annotation.html
@@ -47,7 +47,7 @@
     <!-- Timestamp -->
     <a class="annotation-timestamp"
        target="_blank"
-       title="{{vm.updatedString()}}"
+       title="{{vm.updatedString}}"
        ng-if="!vm.editing() && vm.updated()"
        ng-href="{{::vm.baseURI}}a/{{vm.id()}}"
        >{{vm.timestamp}}</a>
