Style the sidebar tutorial

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -15,6 +15,7 @@ $base-line-height: 20px;
 @import './publish-annotation-btn';
 @import './search-status-bar';
 @import './share-link';
+@import './sidebar-tutorial';
 @import './signin-control';
 @import './simple-search';
 @import './top-bar';
