--- a/h/templates/client/sidebar_tutorial.html
+++ b/h/templates/client/sidebar_tutorial.html
@@ -1,27 +1,37 @@
 <div class="sheet" ng-if="vm.showSidebarTutorial()">
   <i class="close h-icon-close" role="button" title="Close"
      ng-click="vm.dismiss()"></i>
-  <h1>How to get started</h1>
-  <ol>
-    <li>
-      To create an annotation, select text and click the
-      <i class="h-icon-insert-comment"></i> button.
+  <h1 class="sidebar-tutorial__header">How to get started</h1>
+  <ol class="sidebar-tutorial__list">
+    <li class="sidebar-tutorial__list-item">
+      <p class="sidebar-tutorial__list-item-content">
+        To create an annotation, select text and click the
+        <i class="h-icon-insert-comment"></i>&nbsp;button.
+      </p>
     </li>
-    <li>
-      To create a highlight, select text and click the
-      <i class="h-icon-border-color"></i> button.
+    <li class="sidebar-tutorial__list-item">
+      <p class="sidebar-tutorial__list-item-content">
+        To create a highlight, select text and click the
+        <i class="h-icon-border-color"></i>&nbsp;button.
+      </p>
     </li>
-    <li>
-      To reply to an annotation, click the
-      <i class="h-icon-reply"></i> <strong>Reply</strong> link.
+    <li class="sidebar-tutorial__list-item">
+      <p class="sidebar-tutorial__list-item-content">
+        To reply to an annotation, click the
+        <i class="h-icon-reply"></i>&nbsp;<strong>Reply</strong>&nbsp;link.
+      </p>
     </li>
-    <li>
-      To share an annotated page, click the
-      <i class="h-icon-share"></i> button at the top.
+    <li class="sidebar-tutorial__list-item">
+      <p class="sidebar-tutorial__list-item-content">
+        To share an annotated page, click the
+        <i class="h-icon-share"></i>&nbsp;button at the top.
+      </p>
     </li>
-    <li>
-      To create a private group, select <strong>Public</strong>,
-      open the dropdown, click <strong>+ New group</strong>.
+    <li class="sidebar-tutorial__list-item">
+      <p class="sidebar-tutorial__list-item-content">
+        To create a private group, select <strong>Public</strong>,
+        open the dropdown, click&nbsp;<strong>+&nbsp;New&nbsp;group</strong>.
+      </p>
     </li>
   </ol>
 </div>
