Add "create account or sign in" banner
Also remove the "Sign in / Create an account" tabs from the "sign in"
panel. They're no longer needed because the new "To annotate this
document create a free account or sign in" banner to the top of the
sidebar has both links.

Also add a "Sign up" link to the top bar.

--- a/h/static/styles/app.scss
+++ b/h/static/styles/app.scss
@@ -51,6 +51,24 @@ body {
   }
 }
 
+.create-account-banner {
+  background-color: $gray-dark;
+  border-radius: 2px;
+  color: $color-silver-chalice;
+  font-weight: bold;
+  height: 34px;
+  line-height: 34px;
+  margin-bottom: .72em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  width: 100%;
+}
+
+.create-account-banner a {
+  color: $white;
+}
+
 .sheet {
   border: solid 1px $gray-lighter;
   border-radius: 2px;
