Making settings available as a plain object in the Chrome extension
Simplify access to extension settings and make them available
during setup code by loading them as a plain object
in a JS file generated by the build system, rather than
a method which makes a network request.

--- a/h/browser/chrome/manifest.json.jinja2
+++ b/h/browser/chrome/manifest.json.jinja2
@@ -28,6 +28,7 @@
   "background": {
     "persistent": true,
     "scripts": [
+      "/settings-data.js",
       "lib/extension-bundle.js"
     ]
   },
