--- a/h/templates/admin/groups.html.jinja2
+++ b/h/templates/admin/groups.html.jinja2
@@ -25,7 +25,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for group in groups %}
+        {% for group in results %}
           <tr>
             <td>{{ group.name }}</td>
             <td>
@@ -46,4 +46,5 @@
     </table>
   </div>
 
+  {% include "h:templates/includes/paginator.html.jinja2" %}
 {% endblock %}
