--- a/h/templates/old-home.html.jinja2
+++ b/h/templates/old-home.html.jinja2
@@ -242,16 +242,10 @@
                     <div class="installer__section--addtosite">
                       <p>
                         <input class="form-control" type="text"
-                                value='&lt;script async defer src="//hypothes.is/embed.js"&gt;&lt;/script&gt;'>
+                               value="<script async defer src=&quot;{{request.resource_url(context, 'embed.js')}}&quot;></script>">
                       </p>
                       <p>Add the above script tag to your web site's HTML to load
                       the Hypothesis sidebar on your site.</p>
-
-                      <p>To show highlights by default, also add:</p>
-                      <p>
-                        <input class="form-control" type="text"
-                                value='&lt;script&gt;window.hypothesisConfig=function(){return{showHighlights:true};&lt;/script&gt;'>
-                      </p>
 
                       <p>Alternatively, if you use WordPress, checkout the
                       <a href="https://wordpress.org/plugins/hypothesis/">
