Render Chrome extension manifest without going via Pyramid
As part of decoupling the build of the extensions from Pyramid,
render the Chrome extension manifest directly using Jinja2
instead of using Pyramid.

--- a/h/browser/chrome/manifest.json.jinja2
+++ b/h/browser/chrome/manifest.json.jinja2
@@ -23,7 +23,7 @@
     "tabs"
   ],
   "content_security_policy":
-    "script-src 'self' 'unsafe-eval' {{ src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self' data:;",
+    "script-src 'self' 'unsafe-eval' {{ script_src }} https://cdn.mathjax.org; object-src 'self'; font-src 'self' data:;",
 
   "background": {
     "persistent": true,
