Decouple sidebar HTML and embed JS template from webassets and Pyramid
To enable building of the extension and client app without needing
to set up the website, remove all dependencies of the sidebar HTML
and embed JS rendering from Pyramid

 * Extract rendering of the client assets into a separate module
   with no Pyramid dependencies

 * Replace the use of the webassets 'assets' Jinja2 extension and
   references to Pyramid objects in app.html and embed.js

 * Refactor Angular template <script> tag rendering to reduce
   duplication

 * Adapt buildext.py to render app.html and embed.js without going through Pyramid

 * Re-add Google Analytics tracking ID to app HTML template context

   For base.html.jinja2, the Google Analytics tracking ID is
   added by a renderer global in subscribers.py.

   Since app.html.jinja2 is rendered outside of this context,
   we need to pass in the tracking ID explicitly.

 * ga_create_options has been renamed to ga_cookie_domain
   and changed to be an unquoted string rather than a list
   of parameters since that is all we are using it for at the moment.

 * Explicitly disable Google Analytics tracking for the extension

   It was previously the case that when building the extension,
   the Google Analytics tracking ID was never included.

   I'm unsure whether this was intentional or not, so for the moment,
   explicitly pass in the tracking ID as None to make it more obvious
   that tracking is not being used.

--- a/h/templates/embed.js.jinja2
+++ b/h/templates/embed.js.jinja2
@@ -6,6 +6,7 @@ if (typeof(window.annotator) === 'undefined') {
     return;
 }
 
+
 // Injects the hypothesis dependencies. These can be either js or css, the
 // file extension is used to determine the loading method. This file is
 // pre-processed in order to insert the wgxpath, url and inject scripts.
@@ -50,15 +51,13 @@ window.hypothesisInstall = function (inject) {
   };
 
   if (!window.document.evaluate) {
-    {%- assets "wgxpath" %}
-    resources.push('{{ ASSET_URL | safe }}');
-    {%- endassets %}
+    resources.push('{{ wgxpath_url | safe }}');
   }
 
   if (typeof window.Annotator === 'undefined') {
-    {%- assets "inject" %}
-    resources.push('{{ ASSET_URL | safe }}');
-    {%- endassets %}
+    {%- for url in inject_js_urls %}
+    resources.push('{{ url | safe }}');
+    {%- endfor %}
   }
 
   (function next(err) {
@@ -75,7 +74,7 @@ window.hypothesisInstall = function (inject) {
 
 var baseUrl = document.createElement('link');
 baseUrl.rel = 'sidebar';
-baseUrl.href = '{{ app_uri or request.resource_url(context, 'app.html') }}';
+baseUrl.href = '{{ app_html_url }}';
 baseUrl.type = 'application/annotator+html';
 document.head.appendChild(baseUrl);
 
