--- a/h/templates/app.html.jinja2
+++ b/h/templates/app.html.jinja2
@@ -1,113 +1,87 @@
-{% extends "layouts/base.html.jinja2" %}
-
-{% block base_tag %}
-  {# the <base> tag is required by Angular JS when HTML 5 history is
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Hypothesis</title>
+    {# the <base> tag is required by Angular JS when HTML 5 history is
      enabled. We shouldn't really need this because a given instance of the app
      only ever displays a single route.
-   #}
-  <base target="_top" href="/" />
-{% endblock %}
+     #}
+    <base target="_top" href="/" />
+    {% for url in app_css_urls %}
+    <link rel="stylesheet" href="{{ url }}">
+    {% endfor %}
+    {% for attrs in meta_attrs -%}
+      <meta {% for key, value in attrs.items() %}{{ key }}="{{ value }}" {% endfor %}/>
+    {% endfor -%}
+    {% if link_tags %}
+      {% for link in link_tags %}
+        <link rel="{{ link.rel }}" type="{{ link.type }}"
+              href="{{ link.href }}"/>
+      {% endfor %}
+    {% endif %}
+  </head>
+  <body ng-app="h" ng-strict-di ng-controller="AppController" ng-csp="">
+    <top-bar
+      auth="auth"
+      on-login="login()"
+      on-logout="logout()"
+      account-dialog="accountDialog"
+      share-dialog="shareDialog"
+      is-sidebar="::isSidebar"
+      search-controller="search"
+      sort-by="sort.name"
+      sort-options="sort.options"
+      on-change-sort-by="sort.name = sortBy">
+    </top-bar>
 
-{% block styles %}
-  {% assets "app_css" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
-  {% endassets %}
-{% endblock %}
+    <div class="create-account-banner" ng-if="isSidebar && auth.status === 'signed-out'">
+      To annotate this document
+      <a href="{{ register_url }}" target="_blank">
+        create a free account
+      </a>
+      or <a href="" ng-click="login()">sign in</a>
+    </div>
 
-{% block body_tag %}
-{# ng-strict-di is a (harmless) noop until we upgrade to Angular 1.3 #}
-<body ng-app="h" ng-strict-di ng-controller="AppController" ng-csp="">
-{% endblock %}
-
-{% block content %}
-  <top-bar
-    auth="auth"
-    on-login="login()"
-    on-logout="logout()"
-    account-dialog="accountDialog"
-    share-dialog="shareDialog"
-    is-sidebar="::isSidebar"
-    search-controller="search"
-    sort-by="sort.name"
-    sort-options="sort.options"
-    on-change-sort-by="sort.name = sortBy"
-  />
-  </top-bar>
-
-  <div class="create-account-banner" ng-if="isSidebar && auth.status === 'signed-out'">
-    To annotate this document
-    <a href="{{ request.route_url('register') }}" target="_blank">
-      create a free account
-    </a>
-    or <a href="" ng-click="login()">sign in</a>
-  </div>
-
-  <div class="content" ng-cloak>
-    <login-form ng-if="accountDialog.visible"
+    <div class="content" ng-cloak>
+      <login-form ng-if="accountDialog.visible"
                 on-close="accountDialog.visible=false"></login-form>
-    <sidebar-tutorial ng-if="isSidebar"></sidebar-tutorial>
-    <share-dialog ng-show="shareDialog.visible"></share-dialog>
-    <main ng-view=""></main>
-  </div>
-{% endblock %}
+      <sidebar-tutorial ng-if="isSidebar"></sidebar-tutorial>
+      <share-dialog ng-show="shareDialog.visible"></share-dialog>
+      <main ng-view=""></main>
+    </div>
 
-{% block templates %}
-  <script type="text/ng-template" id="annotation.html">
-    {{ include_raw("h:templates/client/annotation.html") }}
-  </script>
-  <script type="text/ng-template" id="excerpt.html">
-    {{ include_raw("h:templates/client/excerpt.html") }}
-  </script>
-  <script type="text/ng-template" id="group_list.html">
-    {{ include_raw("h:templates/client/group_list.html") }}
-  </script>
-  <script type="text/ng-template" id="login_form.html">
-    {{ include_raw("h:templates/client/login_form.html") }}
-  </script>
-  <script type="text/ng-template" id="markdown.html">
-    {{ include_raw("h:templates/client/markdown.html") }}
-  </script>
-  <script type="text/ng-template" id="share_dialog.html">
-    {{ include_raw("h:templates/client/share_dialog.html") }}
-  </script>
-  <script type="text/ng-template" id="viewer.html">
-    {{ include_raw("h:templates/client/viewer.html") }}
-  </script>
-  <script type="text/ng-template" id="thread.html">
-    {{ include_raw("h:templates/client/thread.html") }}
-  </script>
-  <script type="text/ng-template" id="dropdown_menu_btn.html">
-    {{ include_raw("h:templates/client/dropdown_menu_btn.html") }}
-  </script>
-  <script type="text/ng-template" id="publish_annotation_btn.html">
-    {{ include_raw("h:templates/client/publish_annotation_btn.html") }}
-  </script>
-  <script type="text/ng-template" id="search_status_bar.html">
-    {{ include_raw("h:templates/client/search_status_bar.html") }}
-  </script>
-  <script type="text/ng-template" id="sidebar_tutorial.html">
-    {{ include_raw("h:templates/client/sidebar_tutorial.html") }}
-  </script>
-  <script type="text/ng-template" id="signin_control.html">
-    {{ include_raw("h:templates/client/signin_control.html") }}
-  </script>
-  <script type="text/ng-template" id="sort_dropdown.html">
-    {{ include_raw("h:templates/client/sort_dropdown.html") }}
-  </script>
-  <script type="text/ng-template" id="top_bar.html">
-    {{ include_raw("h:templates/client/top_bar.html") }}
-  </script>
-{% endblock %}
+    <!-- Templates for Angular components !-->
+    {% for template in angular_templates -%}
+      <script type="text/ng-template" id="{{template.name}}">
+        {{ template.content | safe }}
+      </script>
+    {% endfor -%}
 
-{# Override ga_pageview block to prevent a 'pageview' event from being sent to
-   Google Analytics #}
-{% block ga_pageview %}{% endblock %}
+    <!-- App Configuration !-->
+    <script id="hypothesis-settings" type="application/json">
+      {{ app_config | safe }}
+    </script>
 
-{% block scripts %}
-  <script id="hypothesis-settings" type="application/json">
-  {{ app_config | to_json }}
-  </script>
-  {% assets "app_js" %}
-    <script src="{{ ASSET_URL }}"></script>
-  {% endassets %}
-{% endblock %}
+    <!-- Scripts !-->
+    {% for url in app_js_urls %}
+    <script src="{{ url }}"></script>
+    {% endfor %}
+
+    <!-- Analytics !-->
+    {% if ga_tracking_id %}
+      <!-- Google Analytics -->
+      <script async src='//www.google-analytics.com/analytics.js'></script>
+      <script>
+       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+       ga('create', 'UA-{{ga_tracking_id}}', '{{ga_cookie_domain}}');
+
+       {# No pageview event is sent here because that is handled by the
+          Angular GA integration in the client app after it boots.
+        #}
+      </script>
+      <!-- End Google Analytics -->
+    {% endif %}
+  </body>
+</html>
