--- a/h/templates/layouts/base.html.jinja2
+++ b/h/templates/layouts/base.html.jinja2
@@ -3,7 +3,6 @@
   <head>
     {% block meta %}
       <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
       <meta name="viewport" content="width=device-width,initial-scale=1" />
       {% for attrs in meta_attrs -%}
         <meta {% for key, value in attrs.items() %}{{ key }}="{{ value }}" {% endfor %}/>
@@ -47,7 +46,7 @@
       <script async src='//www.google-analytics.com/analytics.js'></script>
       <script>
        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-       ga('create', 'UA-{{ga_tracking_id}}', {{ga_create_options|safe}});
+       ga('create', 'UA-{{ga_tracking_id}}', '{{ga_cookie_domain}}');
        {% block ga_pageview %}
        ga('send', 'pageview');
        {% endblock %}
