Add help text to nipsa form
Temporary band-aid.

--- a/h/templates/admin/nipsa.html.jinja2
+++ b/h/templates/admin/nipsa.html.jinja2
@@ -21,6 +21,9 @@
           <label for="add">Username</label>
           <input type="text" class="form-control" name="add">
           <input type="submit" class="btn btn-default" value="Add">
+          <span class="help-block">
+            Must always be <strong>all lower-case</strong>.
+          </span>
         </div>
       </form>
     </div>
