Don't autofocus the group share link
Unfortunately, on group pages for groups who have annotated lots of
documents, this results in a rather confusing jump to the bottom of the
page.

Fixes #2917.

--- a/h/templates/groups/share.html.jinja2
+++ b/h/templates/groups/share.html.jinja2
@@ -43,7 +43,7 @@
               belonging to the group.</li>
           <li>Invite anyone to join the group using the link below:</li>
         </ol>
-        <input class="share-link-field js-share-link" value="{{ group_url }}">
+        <input class="share-link-field" value="{{ group_url }}">
         <a href="//twitter.com/intent/tweet?url={{ group_url }}"
            target="_blank"
            title="Tweet link"
