Deduplicate the profile pages
Add layouts/profile.html.jinja2 for each profile template in
templates/accounts/ to extend, instead of duplicating code in each
template.

--- a/h/templates/accounts/profile.html.jinja2
+++ b/h/templates/accounts/profile.html.jinja2
@@ -1,58 +1,33 @@
-{% extends "h:templates/layouts/base.html.jinja2" %}
+{% extends "h:templates/layouts/profile.html.jinja2" %}
 
-{% block page_title %}Profile{% endblock %}
+{% set page_route = 'profile' %}
+{% set page_title = 'Profile' %}
 
-{% block styles %}
-  {% assets "app_css" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
-  {% endassets %}
-{% endblock styles  %}
+{% block page_content %}
+  <div class="form-vertical">
+    <h2 class="form-heading">
+      <span>{% trans %}Change your email address{% endtrans %}</span>
+    </h2>
+    <legend>
+      {% trans %}Your current email address is:{% endtrans %}
+      <strong>{{ email }}</strong>.
+    </legend>
+    {{ email_form | safe }}
 
-{% block content %}
-  <div class="content paper">
-    {% include "h:templates/includes/logo-header.html.jinja2" %}
-    <ul class="nav nav-tabs">
-      <li class="active">
-        <a href="{{ request.route_path('profile') }}">{% trans %}Profile{% endtrans %}</a>
-      </li>
-      <li>
-        <a href="{{ request.route_path('profile_notifications') }}">{% trans %}Notifications{% endtrans %}</a>
-      </li>
-    </ul>
+    <h2 class="form-heading">
+      <span>{% trans %}Change your password{% endtrans %}</span>
+    </h2>
+    {{ password_form | safe }}
 
-    {% if request.session.peek_flash('success') -%}
-    <div class="form-flash">
-      {% for message in request.session.pop_flash('success') %}
-        <p>{{ message }}</p>
-      {%- endfor %}
-    </div>
-    {%- endif %}
-
-    <div class="form-vertical">
-      <h2 class="form-heading">
-        <span>{% trans %}Change your email address{% endtrans %}</span>
-      </h2>
-      <legend>
-        {% trans %}Your current email address is:{% endtrans %}
-        <strong>{{ email }}</strong>.
-      </legend>
-      {{ email_form | safe }}
-
-      <h2 class="form-heading">
-        <span>{% trans %}Change your password{% endtrans %}</span>
-      </h2>
-      {{ password_form | safe }}
-
-      <h2 class="form-heading">
-        <span>{% trans %}Delete account{% endtrans %}</span>
-      </h2>
-      <legend>
-        {% trans %}
-        If you would like to delete your account, please email us at <a
-        href="mailto:support@hypothes.is">support@hypothes.is</a> from your
+    <h2 class="form-heading">
+      <span>{% trans %}Delete account{% endtrans %}</span>
+    </h2>
+    <legend>
+      {% trans %}
+        If you would like to delete your account, please email us at
+        <a href="mailto:support@hypothes.is">support@hypothes.is</a> from your
         registered email address, and we'll take it from there.
-        {% endtrans %}
-      </legend>
-    </div>
+      {% endtrans %}
+    </legend>
   </div>
-{% endblock content %}
+{% endblock page_content %}
