--- a/h/templates/accounts/notifications.html.jinja2
+++ b/h/templates/accounts/notifications.html.jinja2
@@ -1,38 +1,13 @@
-{% extends "h:templates/layouts/base.html.jinja2" %}
+{% extends "h:templates/layouts/profile.html.jinja2" %}
 
-{% block page_title %}Notifications{% endblock %}
+{% set page_route = 'profile_notifications' %}
+{% set page_title = 'Notifications' %}
 
-{% block styles %}
-  {% assets "app_css" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
-  {% endassets %}
-{% endblock styles  %}
-
-{% block content %}
-  <div class="content paper">
-    {% include "h:templates/includes/logo-header.html.jinja2" %}
-    <ul class="nav nav-tabs">
-      <li>
-        <a href="{{ request.route_path('profile') }}">{% trans %}Profile{% endtrans %}</a>
-      </li>
-      <li class="active">
-        <a href="{{ request.route_path('profile_notifications') }}">{% trans %}Notifications{% endtrans %}</a>
-      </li>
-    </ul>
-
-    {% if request.session.peek_flash('success') -%}
-    <div class="form-flash">
-      {% for message in request.session.pop_flash('success') %}
-        <p>{{ message }}</p>
-      {%- endfor %}
-    </div>
-    {%- endif %}
-
-    <div class="form-vertical">
-      <h2 class="form-heading">
-        <span>{% trans %}Update your notification settings{% endtrans %}</span>
-      </h2>
-      {{ form | safe }}
-    </div>
+{% block page_content %}
+  <div class="form-vertical">
+    <h2 class="form-heading">
+      <span>{% trans %}Update your notification settings{% endtrans %}</span>
+    </h2>
+    {{ form | safe }}
   </div>
-{% endblock content %}
+{% endblock page_content %}
